Issue: #97, #65 The popup now includes the section and component (lec/lab/tut). Also made some changes to the design of the calendar to minimize the size it takes on the screen but some of the events are now shifted a bit down. Need to investigate this issue. Hours: 1.5 hours

--- a/src/app/components/user/react-big-calendar.css
+++ b/src/app/components/user/react-big-calendar.css
@@ -471,6 +471,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-time-view .rbc-time-gutter {
   white-space: nowrap;
   font-weight: 600;
+  font-size: 14px;
 }
 .rbc-time-view .rbc-allday-cell {
   width: 0%;
